# libtimerfd

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  README.md  autogen.sh  configure.ac  timerfd.pc.in
src/: Makefile.am  syscall.h  timerfd.c
tests/: Makefile.am  test_timerfd_create  test_timerfd_create.c  test_timerfd_settime  test_timerfd_settime.c
